// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card test card empty state 1`] = `
.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 100%;
  min-height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 {
  margin-bottom: 0;
}

.c8 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  margin-bottom: 1.4375rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFFFFF;
  box-shadow: 0 0 0.125rem 0rem rgba(0,0,0,0.15);
  border-radius: 0.25rem;
  box-sizing: border-box;
  padding: 1.5rem 1.5rem 1rem;
  overflow: visible;
  position: relative;
}

.c0 > * {
  min-width: 0;
  min-height: 0;
  overflow: visible;
}

.c5 {
  -webkit-transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  opacity: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 1.3125rem;
}

.c3 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: #474747;
  display: inline-block;
  margin: 0;
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  min-height: 2.6875rem;
  min-width: 3.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.5rem;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="card"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <p
            class="c3"
            data-testid="title"
          >
            title
          </p>
        </div>
        <div
          class="c4"
          data-testid="subtitle"
        >
          subtitle
        </div>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
          data-testid="empty-screen"
        >
          <div
            class="c7"
          >
            <svg
              data-testid="empty-icon"
            />
          </div>
          <div
            class="c8"
          >
            No Data
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Card test card error state 1`] = `
.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 100%;
  min-height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #2D2D2D;
  margin-bottom: 1.4375rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFFFFF;
  box-shadow: 0 0 0.125rem 0rem rgba(0,0,0,0.15);
  border-radius: 0.25rem;
  box-sizing: border-box;
  padding: 1.5rem 1.5rem 1rem;
  overflow: visible;
  position: relative;
}

.c0 > * {
  min-width: 0;
  min-height: 0;
  overflow: visible;
}

.c5 {
  -webkit-transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  opacity: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 1.3125rem;
}

.c3 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: #474747;
  display: inline-block;
  margin: 0;
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  min-height: 2.6875rem;
  min-width: 3.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.5rem;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="card"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <p
            class="c3"
            data-testid="title"
          >
            title
          </p>
        </div>
        <div
          class="c4"
          data-testid="subtitle"
        >
          subtitle
        </div>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
          data-testid="error-screen"
        >
          <div
            class="c7"
          >
            Server Error
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Card test card loading state 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFFFFF;
  box-shadow: 0 0 0.125rem 0rem rgba(0,0,0,0.15);
  border-radius: 0.25rem;
  box-sizing: border-box;
  padding: 1.5rem 1.5rem 1rem;
  overflow: visible;
  position: relative;
  pointer-events: none;
}

.c0 * {
  cursor: default;
}

.c0 > * {
  min-width: 0;
  min-height: 0;
  overflow: visible;
}

.c6 {
  opacity: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 1.3125rem;
}

.c3 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: #474747;
  display: inline-block;
  margin: 0;
}

.c5 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  min-height: 2.6875rem;
  min-width: 3.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.5rem;
}

.c4 {
  margin-left: 0.5625rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-animation: AGEkE 1.25s;
  animation: AGEkE 1.25s;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="card"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <p
            class="c3"
            data-testid="title"
          >
            title
          </p>
          <svg
            class="c4"
            data-testid="loader"
          />
        </div>
        <div
          class="c5"
          data-testid="subtitle"
        >
          subtitle
        </div>
      </div>
      <div
        class="c6"
      >
        <div>
          Samsung
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Card test card render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFFFFF;
  box-shadow: 0 0 0.125rem 0rem rgba(0,0,0,0.15);
  border-radius: 0.25rem;
  box-sizing: border-box;
  padding: 1.5rem 1.5rem 1rem;
  overflow: visible;
  position: relative;
}

.c0 > * {
  min-width: 0;
  min-height: 0;
  overflow: visible;
}

.c5 {
  -webkit-transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  opacity: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 1.3125rem;
}

.c3 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  color: #474747;
  display: inline-block;
  margin: 0;
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  min-height: 2.6875rem;
  min-width: 3.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.5rem;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="card"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <p
            class="c3"
            data-testid="title"
          >
            title
          </p>
        </div>
        <div
          class="c4"
          data-testid="subtitle"
        >
          subtitle
        </div>
      </div>
      <div
        class="c5"
      >
        <div>
          Samsung
        </div>
      </div>
    </div>
  </div>
</body>
`;
